After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679159 - Wacom display mapping dialog handles disconnects poorly
Wacom display mapping dialog handles disconnects poorly
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Wacom
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Peter Hutterer
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-29 19:02 UTC by Jason Gerecke
Modified: 2012-07-04 12:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1.11 KB, patch)
2012-07-03 12:00 UTC, Olivier Fourdan
accepted-commit_now Details | Review

Description Jason Gerecke 2012-06-29 19:02:37 UTC
I noticed that there are some problems when tablets are unplugged and/or plugged in while the button mapping dialog is open.

I can cause the mapping dialog's "Close" button to stop responding by unplugging and then reconnecting the tablet (the ESC key still works the exit the dialog). I can also semi-reliably trigger a segfault if 2 tablets are plugged in by opening the mapping dialog for the tablet on page 1/2 and then disconnecting it.

This is probably a "minor" severity given the odd behavior required to trigger problems, but will leave proper classification to the developers.
Comment 1 Olivier Fourdan 2012-07-03 11:46:13 UTC
Are you sure this is with the button mapping dialog in current git?

Reason I'm asking is because it sounds like a bug 676790 which is fixed with git commit aa161bac and indeed I cannot reproduce this bug with gnome-control-center from current git.

As soon as I unplug the device with the button mapping dialog open, the dialog is closed.

Yet I can with the /monitor/ mapping dialog, thus I suspect a fix similar to bug 676790 for the monitor dialog would be needed as well.
Comment 2 Olivier Fourdan 2012-07-03 12:00:56 UTC
Created attachment 217927 [details] [review]
Proposed patch

Destroy the display mapping dialogue on unplug just like we do for the button mapping dialogue.
Comment 3 Jason Gerecke 2012-07-03 16:04:48 UTC
Bug was originally found on Fedora 17 (control-center-3.4.2-1.fc17.i686) and also seen on Arch Linux (extra/gnome-control-center 3.4.2-1). Based on that there's a reasonable chance bug 676790 could be the same, or at least fixed by the same patch.

If I can get jhbuild to make me a proper environment from git again I'll double-check everything and report back.
Comment 4 Jason Gerecke 2012-07-03 23:20:38 UTC
Update after rebuilding from jhbuild: the segfault does appear to be fixed as of the current git master, and your attached patch does appear to correctly destroy the display mapping dialog for me as well. I can't find any more oddities related to unplugging the tablet, so this can be marked resolved.
Comment 5 Olivier Fourdan 2012-07-04 07:58:13 UTC
Thanks for the update.

The patch needs to be committed first before the bug is marked resolved, once the proposed patch is reviewed.
Comment 6 Bastien Nocera 2012-07-04 09:40:10 UTC
Review of attachment 217927 [details] [review]:

Looks good.
Comment 7 Olivier Fourdan 2012-07-04 12:56:41 UTC
commit 3083fda606bce5ce09662a16911262b4f4958c81

    wacom: Destroy display mapping dialogue on unplug
    
    https://bugzilla.gnome.org/show_bug.cgi?id=679159