wacom: Destroy display mapping dialogue on unplug

https://bugzilla.gnome.org/show_bug.cgi?id=679159